@@ -1,5 +1,5 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin dtplite n 1.0.5]
+[manpage_begin dtplite n 1.1]
 [copyright {2004-2013 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [titledesc {Lightweight DocTools Markup Processor}]
 [moddesc   {Documentation toolbox}]
