@@ -2,4 +2,4 @@ if {![package vsatisfies [package provide Tcl] 8.2]} {
     # PRAGMA: returnok
     return
 }
-package ifneeded dtplite 1.0.5 [list source [file join $dir dtplite.tcl]]
+package ifneeded dtplite 1.1 [list source [file join $dir dtplite.tcl]]
